fix: made heading of cards visible

--- a/css/styles.css
+++ b/css/styles.css
@@ -251,16 +251,41 @@ a {
 
 #cards a {
     float : right;
-    padding : 10px;
+    padding: 8px 15px 8px 15px;
     border: none;
     box-shadow: 0 5px 15px gray ;
     border-radius: 15px;
     cursor: pointer;
     transition: .3s;
+    color:#3573dd;
 }
 
 #cards a:hover {
     transform: translateY(-6px);
+}
+
+#profile-url-section {
+    /* text-align: center; */
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    gap : 5px;
+    border : none;
+    box-shadow: 0 6px 15px rgba(128, 128, 128, 0.253) ;
+    padding: 10px;
+    border-radius: 15px;
+    transition: .3s;
+}
+
+#profile-url-section:hover {
+    transform: translateY(-6px);
+}
+
+#profile-url-section p {
+    font-size : 18px;
+    text-decoration: underline;
+    font-weight: bolder;
 }
 
 .repo-card,
@@ -277,6 +302,19 @@ a {
     border-radius: 50%;
     margin-bottom: 10px;
 }
+
+#openedCard{
+    display: none;
+    border : none;
+    box-shadow: 0 5px 15px rgba(0,0,0,.1);
+    margin-top: 20px;
+    padding: 15px;
+    background-color: white;
+    border-radius: 10px;
+    width : 90%;
+    text-align: center;
+}
+
 
 /* ---------- Responsive ---------- */
 
